src/test/deca/syntax/valid/self/DoubleInclude.deca
#include "calcul.deca"
#include "comment_not_finish.deca"