src/test/deca/syntax/invalid/self/circularinclude2.deca
#include "circularinclude1.deca"